apps/backend/httproute-backend.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: backend-route
spec:
  parentRefs:
  - name: my-shared-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /backend
    backendRefs:
    - name: backend
      port: 5678
